updated section UI

--- a/src/app/component/img/img.component.html
+++ b/src/app/component/img/img.component.html
@@ -1,7 +1,7 @@
-<div attr.id="{{'tab'+index}}" class="section" >  
+<div attr.id="{{'tab'+index}}" class="section card" >  
     <h1>{{content.name}}</h1>
     <div class="img-container">
-        <img src={{content.url}} alt="image description"/>
+        <img src={{content.url}} alt="image description" class="img-fluid"/>
    </div>
   </div>
   
