--- a/src/app/component/pdf/pdf.component.html
+++ b/src/app/component/pdf/pdf.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section" > 
+<div attr.id="{{'tab'+index}}" class="section card" > 
   
   <object class="full-auto" [attr.data]="content.url | safeUrl"  type="application/pdf">
       <p>Insert your error message here, if the PDF cannot be displayed.</p>
