--- a/src/app/component/video/video.component.html
+++ b/src/app/component/video/video.component.html
@@ -1,5 +1,5 @@
 
-<div attr.id="{{'tab'+index}}" class="section" >  
+<div attr.id="{{'tab'+index}}" class="section card" >  
     <h1>{{content.name}}</h1>
     <vg-player >
         <vg-buffering></vg-buffering>
