updated section UI

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -290,6 +290,12 @@ audio {
   padding: 0.875rem;
 }
 
+@media (max-width: 767px) {
+  .card .card-block {
+    padding: 0.5rem;
+  }
+}
+
 .card .header {
   min-height: 85px;
   margin: 0 0 20px;
