--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -2,6 +2,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-12">
+            <a href="javascript:void(0)" class="btn-back">
+              <i class="fa fa-angle-left" aria-hidden="true"></i> Back To Courses
+            </a>
+          </div>
+        </div>
         <div class="img-holder"><img src="assets/images/icon-img.png" alt="course Image" class="img-fluid"></div>
         <div class="header-text">
           <div class="holder">
