--- a/src/app/component/pdf/pdf.component.html
+++ b/src/app/component/pdf/pdf.component.html
@@ -1,5 +1,5 @@
 <div attr.id="{{'tab'+index}}" class="section card" > 
-  
+  <h1>{{content.name}}</h1>
   <object class="full-auto" [attr.data]="content.url | safeUrl"  type="application/pdf">
       <p>Insert your error message here, if the PDF cannot be displayed.</p>
   </object>
