--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="row">
-          <div class="col-sm-12">
-            <a href="javascript:void(0)" class="btn-back">
-              <i class="fa fa-angle-left" aria-hidden="true"></i> Back To Courses
+          <div class="col-sm-12" >
+            <a href="javascript:void(0)" (click)="back()" class="btn-back">
+              <i class="fa fa-angle-left"  aria-hidden="true"></i> Back To Courses
             </a>
           </div>
         </div>
@@ -58,7 +58,7 @@
         <aside id="sidebar">
           <h6>Topics</h6>
           <ul class="list-unstyled" >
-              <li *ngFor="let c of contentlist; let i = index"><a attr.href="{{'#tab'+i}}" >{{c.name}}</a></li>
+              <li *ngFor="let c of contentlist; let i = index"><a attr.href="{{'#tab'+i}}" *ngIf="c.type != 'Question'" >{{c.name}}</a></li>
             <!-- <li><a href="#tab1">Learning Objectives</a></li>
             <li><a href="#tab2">Welcome to Your Lightning Experience Rollout</a></li>
             <li><a href="#tab3">What It Takes to Go Live</a></li>
