updated UI for detail page

--- a/src/app/component/img/img.component.html
+++ b/src/app/component/img/img.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section card" >  
+<div attr.id="{{'tab'+index}}" class="section" >  
     <h1>{{content.name}}</h1>
     <div class="img-container">
         <img src={{content.url}} alt="image description" class="img-fluid"/>
