--- a/src/app/component/slides/slides.component.html
+++ b/src/app/component/slides/slides.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section card" > 
+<div attr.id="{{'tab'+index}}" class="section" > 
     <h1>{{content.name}}</h1>
     <div id="audioslideshow" class="audio-slideshow" attr.data-audio="{{audio}}" attr.data-audio-duration="{{duration}}">
             <div *ngFor="let img of image; let i = index"  class="audio-slides">
