--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -15,46 +15,49 @@
             <span class="sub-head">Module</span>
           <h1>{{title}}</h1>
           <span class="description">Explore highlights from the Winter '18 Release Notes.</span>
-          <time datetime="2017-12-12"><span>Time Estimate :</span> 40 mins</time>
+         
           </div>
           <div class="footer">
-            <ul class="icons-list list-inline">
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-icon btn-light btn-fav">
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-icon btn-light">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-              </a>
-            </li>
-          </ul>
-          <ul class="tags-list list-inline">
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-light">tag1</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-light">tag2</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-light">tag3</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="javascript:void(0)" class="btn btn-light">tag4</a>
-            </li>
-          </ul>
+              <time datetime="2017-12-12"><span>Time Estimate :</span> 40 mins</time>
+            <div class="holder">
+              <ul class="icons-list list-inline">
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-icon btn-light btn-fav">
+                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-icon btn-light">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                  </a>
+                </li>
+              </ul>
+              <ul class="tags-list list-inline">
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-light">tag1</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-light">tag2</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-light">tag3</a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="javascript:void(0)" class="btn btn-light">tag4</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </header>
-<div class="container">
+<div class="container detail-container">
 <div class="row">
   <div class="col-sm-12">
-    <div class="card course-detail">
-      <div class="card-block">
+    <div class="course-detail clearfix">
+      
         <aside id="sidebar">
           <h6>Topics</h6>
           <ul class="list-unstyled" >
@@ -78,7 +81,7 @@
         <div id="content">
           <div  #parent></div>
         </div>
-      </div>
+      
     </div>
   </div>
 </div>
