--- a/src/app/component/audio/audio.component.html
+++ b/src/app/component/audio/audio.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section card" >  
+<div attr.id="{{'tab'+index}}" class="section" >  
     <h1>{{content.name}}</h1>
     <vg-player>
         <video  [vgMedia]="media" #media id="singleVideo" preload="auto" controls>
