--- a/src/app/component/document/document.component.html
+++ b/src/app/component/document/document.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section card" > 
+<div attr.id="{{'tab'+index}}" class="section" > 
     <h1>{{content.name}}</h1>
     <iframe class="full-auto"  [attr.src]="getUrl() | safeUrl"  width='100%' height='100%' frameborder='0'>This is an embedded <a target='_blank' href='http://office.com'>Microsoft Office</a> document, powered by <a target='_blank' href='http://office.com/webapps'>Office Online</a>.</iframe>
   </div>
