--- a/src/app/component/text/text.component.html
+++ b/src/app/component/text/text.component.html
@@ -1,4 +1,4 @@
-<div attr.id="{{'tab'+index}}" class="section card" > 
+<div attr.id="{{'tab'+index}}" class="section" > 
     <h1>{{content.name}}</h1>
     <div class="full-auto">
             <div [innerHTML]="content.text | safeHtml" class="info-text"></div>
