--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -9,7 +9,10 @@ $very-dark-gray								: #6f6f6f;
 $very-dark-grayish-blue						: #333e48;
 $dark-moderate-cyan							: #4c9688;
 $moderate-red								: #c13c3a;
+$moderate-blue2								: #4E8BB4;
+$light-grayish-blue2						: #dde2ea;
 $green										: #4c988b;
+
 
 
 
