--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -54,3 +54,4 @@ $media-expressions: (
 @import 'components/sidebar';
 @import 'components/content';
 @import 'components/questions-list';
+@import 'components/audio-slideshow';
